--- a/services/web/server/src/simcore_service_webserver/templates/common/registration_email-v2.html
+++ b/services/web/server/src/simcore_service_webserver/templates/common/registration_email-v2.html
@@ -1,4 +1,8 @@
 Please confirm email for your oSPARC account
+<!--
+TEST name:{{ name }}
+TEST link:{{ link }}
+-->
 <html>
 <head>
 <title>Welcome to oSPARC</title>
@@ -11,8 +15,8 @@ Please confirm email for your oSPARC account
     <title></title>
     <!--[if !mso]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--<![endif]-->
     <meta name="viewport" content="width=device-width"><style type="text/css">
-@media only screen and (min-width: 620px){.wrapper{min-width:600px !important}.wrapper h1{}.wrapper h1{font-size:22px !important;line-height:31px !important}.wrapper h2{}.wrapper h2{font-size:20px !important;line-height:28px !important}.wrapper h3{}.wrapper h3{font-size:18px !important;line-height:26px !important}.column{}.wrapper .size-8{font-size:8px !important;line-height:14px !important}.wrapper .size-9{font-size:9px !important;line-height:16px !important}.wrapper .size-10{font-size:10px !important;line-height:18px !important}.wrapper .size-11{font-size:11px !important;line-height:19px !important}.wrapper .size-12{font-size:12px !important;line-height:19px !important}.wrapper .size-13{font-size:13px !important;line-height:21px !important}.wrapper .size-14{font-size:14px !important;line-height:21px !important}.wrapper .size-15{font-size:15px !important;line-height:23px 
-!important}.wrapper .size-16{font-size:16px !important;line-height:24px !important}.wrapper .size-17{font-size:17px !important;line-height:26px !important}.wrapper .size-18{font-size:18px !important;line-height:26px !important}.wrapper .size-20{font-size:20px !important;line-height:28px !important}.wrapper .size-22{font-size:22px !important;line-height:31px !important}.wrapper .size-24{font-size:24px !important;line-height:32px !important}.wrapper .size-26{font-size:26px !important;line-height:34px !important}.wrapper .size-28{font-size:28px !important;line-height:36px !important}.wrapper .size-30{font-size:30px !important;line-height:38px !important}.wrapper .size-32{font-size:32px !important;line-height:40px !important}.wrapper .size-34{font-size:34px !important;line-height:43px !important}.wrapper .size-36{font-size:36px !important;line-height:43px !important}.wrapper 
+@media only screen and (min-width: 620px){.wrapper{min-width:600px !important}.wrapper h1{}.wrapper h1{font-size:22px !important;line-height:31px !important}.wrapper h2{}.wrapper h2{font-size:20px !important;line-height:28px !important}.wrapper h3{}.wrapper h3{font-size:18px !important;line-height:26px !important}.column{}.wrapper .size-8{font-size:8px !important;line-height:14px !important}.wrapper .size-9{font-size:9px !important;line-height:16px !important}.wrapper .size-10{font-size:10px !important;line-height:18px !important}.wrapper .size-11{font-size:11px !important;line-height:19px !important}.wrapper .size-12{font-size:12px !important;line-height:19px !important}.wrapper .size-13{font-size:13px !important;line-height:21px !important}.wrapper .size-14{font-size:14px !important;line-height:21px !important}.wrapper .size-15{font-size:15px !important;line-height:23px
+!important}.wrapper .size-16{font-size:16px !important;line-height:24px !important}.wrapper .size-17{font-size:17px !important;line-height:26px !important}.wrapper .size-18{font-size:18px !important;line-height:26px !important}.wrapper .size-20{font-size:20px !important;line-height:28px !important}.wrapper .size-22{font-size:22px !important;line-height:31px !important}.wrapper .size-24{font-size:24px !important;line-height:32px !important}.wrapper .size-26{font-size:26px !important;line-height:34px !important}.wrapper .size-28{font-size:28px !important;line-height:36px !important}.wrapper .size-30{font-size:30px !important;line-height:38px !important}.wrapper .size-32{font-size:32px !important;line-height:40px !important}.wrapper .size-34{font-size:34px !important;line-height:43px !important}.wrapper .size-36{font-size:36px !important;line-height:43px !important}.wrapper
 .size-40{font-size:40px !important;line-height:47px !important}.wrapper .size-44{font-size:44px !important;line-height:50px !important}.wrapper .size-48{font-size:48px !important;line-height:54px !important}.wrapper .size-56{font-size:56px !important;line-height:60px !important}.wrapper .size-64{font-size:64px !important;line-height:63px !important}}
 </style>
     <style type="text/css">
@@ -449,7 +453,7 @@ div.preheader {
   line-height: 63px !important;
 }
 </style>
-    
+
   <!--[if !mso]><!--><style type="text/css">
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400italic,400,700,700italic|Open+Sans:400italic,700italic,700,400);
 </style><link href="https://fonts.googleapis.com/css?family=Merriweather:400italic,400,700,700italic|Open+Sans:400italic,700italic,700,400" rel="stylesheet" type="text/css"><!--<![endif]--><style type="text/css">
@@ -467,53 +471,53 @@ body{background-color:#fff}.logo a:hover,.logo a:focus{color:#fff !important}.ms
           <div style="border-collapse: collapse;display: table;width: 100%;">
           <!--[if (mso)|(IE)]><table align="center" class="preheader" cellpadding="0" cellspacing="0" role="presentation"><tr><td style="width: 280px" valign="top"><![endif]-->
             <div class="snippet" style="display: table-cell;Float: left;font-size: 12px;line-height: 19px;max-width: 280px;min-width: 140px; width: 140px;width: calc(14000% - 78120px);padding: 10px 0 5px 0;color: #bbb;font-family: Open Sans,sans-serif;">
-              
+
             </div>
           <!--[if (mso)|(IE)]></td><td style="width: 280px" valign="top"><![endif]-->
             <div class="webversion" style="display: table-cell;Float: left;font-size: 12px;line-height: 19px;max-width: 280px;min-width: 139px; width: 139px;width: calc(14100% - 78680px);padding: 10px 0 5px 0;text-align: right;color: #bbb;font-family: Open Sans,sans-serif;">
-              
+
             </div>
           <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
           </div>
         </div>
-        
+
       </div>
       <div role="section">
       <div class="layout one-col fixed-width" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
         <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;background-color: #ffffff;">
         <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0" role="presentation"><tr class="layout-fixed-width" style="background-color: #ffffff;"><td style="width: 600px" class="w560"><![endif]-->
           <div class="column" style="text-align: left;color: #353638;font-size: 17px;line-height: 26px;font-family: Merriweather,Georgia,serif;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);">
-        
+
             <div style="Margin-left: 20px;Margin-right: 20px;">
       <div style="mso-line-height-rule: exactly;line-height: 20px;font-size: 1px;">&nbsp;</div>
     </div>
-        
+
             <div style="Margin-left: 20px;Margin-right: 20px;">
       <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
         <p class="size-16" style="Margin-top: 0;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Dear&nbsp;{{ name }}</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Welcome to oSPARC. We are excited to welcome you on our online simulation platform for peripheral nerve system stimulation.</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Your platform account has been successfully created.<br>
-To <strong>complete your registration</strong> please click <a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #289fd8;" href="{{ link }}">here</a>.</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Please note that the oSPARC platform is currently in its&nbsp;V0.1 alpha state, thus providing only limited functionality.</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Our support team is here to help with anything you need. Please feel free to <a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #289fd8;" 
+To <strong>complete your registration</strong> please click <a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #289fd8;" href="{{ link }}">here</a>.</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Please note that the oSPARC platform is currently in its&nbsp;V0.1 alpha state, thus providing only limited functionality.</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Our support team is here to help with anything you need. Please feel free to <a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #289fd8;"
 href="mailto:support@osparc.io">contact us</a> in case of questions or any required assistance.</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">We look forward to receiving&nbsp;your <a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #289fd8;" href="mailto:support@osparc.io">feedback</a>. Enjoy oSPARC!</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Kind regards</span></p><p class="size-16" style="Margin-top: 20px;Margin-bottom: 20px;font-family: open sans,sans-serif;font-size: 16px;line-height: 24px;" lang="x-size-16"><span class="font-open-sans">Your oSPARC&nbsp;Team</span></p>
       </div>
     </div>
-        
+
             <div style="Margin-left: 20px;Margin-right: 20px;">
       <div style="mso-line-height-rule: exactly;line-height: 10px;font-size: 1px;">&nbsp;</div>
     </div>
-        
+
             <div style="Margin-left: 20px;Margin-right: 20px;">
         <div style="font-size: 12px;font-style: normal;font-weight: normal;line-height: 19px;" align="left">
           <a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #289fd8;" href="https://itis.cmail20.com/t/d-l-njtjjkk-jluhjllyhy-y/"><img style="border: 0;display: block;height: auto;width: 100%;max-width: 174px;" alt="oSPARC" width="174" src="http://i1.cmail20.com/ei/d/81/D31/159/064520/csfinal/osparc-black-99051406db01453c.jpg"></a>
         </div>
       </div>
-        
+
           </div>
         <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
         </div>
       </div>
-  
+
       <div style="mso-line-height-rule: exactly;line-height: 22px;font-size: 22px;">&nbsp;</div>
-  
-      
+
+
       <div style="mso-line-height-rule: exactly;" role="contentinfo">
         <div class="layout email-footer" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
           <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;">
@@ -521,7 +525,7 @@ href="mailto:support@osparc.io">contact us</a> in case of questions or any requi
             <div class="column wide" style="text-align: left;font-size: 12px;line-height: 19px;color: #bbb;font-family: Open Sans,sans-serif;Float: left;max-width: 400px;min-width: 320px; width: 320px;width: calc(8000% - 47600px);">
               <div style="Margin-left: 20px;Margin-right: 20px;Margin-top: 10px;Margin-bottom: 10px;">
                 <table class="email-footer__links emb-web-links" style="border-collapse: collapse;table-layout: fixed;" role="presentation"><tbody><tr role="navigation">
-                <td class="emb-web-links" style="padding: 0;width: 26px;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #bbb;" href="https://itis.cmail20.com/t/d-l-njtjjkk-jluhjllyhy-j/"><img style="border: 0;" src="http://i2.cmail20.com/static/eb/master/13-the-blueprint-3/images/facebook.png" width="26" height="26" alt="Facebook"></a></td><td class="emb-web-links" style="padding: 0 0 0 3px;width: 26px;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #bbb;" href="https://itis.cmail20.com/t/d-l-njtjjkk-jluhjllyhy-t/"><img style="border: 0;" src="http://i4.cmail20.com/static/eb/master/13-the-blueprint-3/images/youtube.png" width="26" height="26" alt="YouTube"></a></td><td class="emb-web-links" style="padding: 0 0 0 3px;width: 26px;"><a 
+                <td class="emb-web-links" style="padding: 0;width: 26px;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #bbb;" href="https://itis.cmail20.com/t/d-l-njtjjkk-jluhjllyhy-j/"><img style="border: 0;" src="http://i2.cmail20.com/static/eb/master/13-the-blueprint-3/images/facebook.png" width="26" height="26" alt="Facebook"></a></td><td class="emb-web-links" style="padding: 0 0 0 3px;width: 26px;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #bbb;" href="https://itis.cmail20.com/t/d-l-njtjjkk-jluhjllyhy-t/"><img style="border: 0;" src="http://i4.cmail20.com/static/eb/master/13-the-blueprint-3/images/youtube.png" width="26" height="26" alt="YouTube"></a></td><td class="emb-web-links" style="padding: 0 0 0 3px;width: 26px;"><a
 style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #bbb;" href="https://itis.cmail20.com/t/d-l-njtjjkk-jluhjllyhy-i/"><img style="border: 0;" src="http://i6.cmail20.com/static/eb/master/13-the-blueprint-3/images/linkedin.png" width="26" height="26" alt="LinkedIn"></a></td>
                 </tr></tbody></table>
                 <div style="font-size: 12px;line-height: 19px;Margin-top: 20px;">
@@ -530,7 +534,7 @@ Zeughausstrasse 43, 8004 Zurich, Switzerland<br>
 www.itis.swiss | info@itis.swiss</div>
                 </div>
                 <div style="font-size: 12px;line-height: 19px;Margin-top: 18px;">
-                  
+
                 </div>
                 <!--[if mso]>&nbsp;<![endif]-->
               </div>
@@ -557,14 +561,14 @@ www.itis.swiss | info@itis.swiss</div>
                       <span style="font-size: 11px;mso-text-raise: 3px;">Share&nbsp;</span>
                     </a>
                   </div>
-                  
+
                 </div>
               </div>
             </div>
           <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
           </div>
         </div>
-<!-- 
+<!--
         <div class="layout one-col email-footer" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
           <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;">
           <!~~[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0" role="presentation"><tr class="layout-email-footer"><td style="width: 600px;" class="w560"><![endif]~~>
