--- a/services/web/server/src/simcore_service_webserver/templates/common/change_email_email.html
+++ b/services/web/server/src/simcore_service_webserver/templates/common/change_email_email.html
@@ -6,8 +6,7 @@ TEST host:{{ host }}
 <h1>Change your email address on {{ host }}</h1>
 
 <p>
-You has requested a email address changing for your {{ host }} account.
-Follow the link below to do this:
+You have requested to change your email address. Follow the link below to do this:
 </p>
 
 <p>
