All responses to reset password and done via email as proposed in guidelines

--- a/services/web/server/src/simcore_service_webserver/templates/common/change_email_email.html
+++ b/services/web/server/src/simcore_service_webserver/templates/common/change_email_email.html
@@ -12,3 +12,7 @@ You have requested to change your email address. Follow the link below to do thi
 <p>
 <a href="{{ link }}">{{ link }}</a>
 </p>
+
+<p>
+  Our support team is here to help with anything you need. Please feel free to contact us to support@osparc.io in case of questions or any required assistance.
+</p>
