--- a/services/web/server/src/simcore_service_webserver/templates/common/reset_password_email_failed.html
+++ b/services/web/server/src/simcore_service_webserver/templates/common/reset_password_email_failed.html
@@ -7,7 +7,11 @@ TEST reason:{{ reason }}
 
 <p>
 Someone has requested a password reset for your {{ host }} account but it could not be completed
-due to the following reason: {{ reason }}
+due to the following reason:
+</p>
+
+<p>
+  <strong> {{ reason }} </strong>
 </p>
 
 <p>
